[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataContainer" type="VBoxContainer" parent="MainContainer"]
margin_right = 200.0
margin_bottom = 380.0
rect_min_size = Vector2( 200, 0 )

[node name="DataPanel" type="PanelContainer" parent="MainContainer/DataContainer"]
margin_right = 200.0
margin_bottom = 318.0
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/DataContainer/DataPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 311.0

[node name="NameLabel" type="Label" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_right = 186.0
margin_bottom = 14.0
text = "Player Name:"

[node name="Name" type="LineEdit" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0

[node name="BaseLabel" type="Label" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 46.0
margin_right = 186.0
margin_bottom = 60.0
text = "Base Level:"

[node name="Base" type="SpinBox" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 64.0
margin_right = 186.0
margin_bottom = 88.0
min_value = 1.0
value = 1.0

[node name="JobLabel" type="Label" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 92.0
margin_right = 186.0
margin_bottom = 106.0
text = "Job Level:"

[node name="Job" type="SpinBox" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 110.0
margin_right = 186.0
margin_bottom = 134.0
min_value = 1.0
value = 1.0

[node name="ClassLabel" type="Label" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 138.0
margin_right = 186.0
margin_bottom = 152.0
text = "Class:"

[node name="Class" type="OptionButton" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 156.0
margin_right = 186.0
margin_bottom = 176.0
text = "Acolyte"
items = [ "Acolyte", null, false, 0, null, "Archer", null, false, 1, null, "Mage", null, false, 2, null, "Merchant", null, false, 3, null, "Swordman", null, false, 4, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 180.0
margin_right = 186.0
margin_bottom = 184.0

[node name="Clear" type="Button" parent="MainContainer/DataContainer/DataPanel/Container"]
margin_top = 188.0
margin_right = 186.0
margin_bottom = 208.0
text = "Clear"

[node name="ButtonPanel" type="PanelContainer" parent="MainContainer/DataContainer"]
margin_top = 322.0
margin_right = 200.0
margin_bottom = 380.0

[node name="Container" type="VBoxContainer" parent="MainContainer/DataContainer/ButtonPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 51.0

[node name="Save" type="Button" parent="MainContainer/DataContainer/ButtonPanel/Container"]
margin_right = 186.0
margin_bottom = 20.0
text = "Save"

[node name="Load" type="Button" parent="MainContainer/DataContainer/ButtonPanel/Container"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 44.0
text = "Load"

[node name="ConsolePanel" type="PanelContainer" parent="MainContainer"]
margin_left = 204.0
margin_right = 720.0
margin_bottom = 380.0
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="MainContainer/ConsolePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 509.0
margin_bottom = 373.0

[node name="Header" type="Label" parent="MainContainer/ConsolePanel/Container"]
margin_right = 502.0
margin_bottom = 14.0
text = "Console"

[node name="Console" type="TextEdit" parent="MainContainer/ConsolePanel/Container"]
margin_top = 18.0
margin_right = 502.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
show_line_numbers = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
smooth_scrolling = true

[node name="DialogContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="AcceptDialog" parent="DialogContainer"]
margin_left = 318.0
margin_top = 161.0
margin_right = 401.0
margin_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
popup_exclusive = true
dialog_text = "MESSAGE"

[connection signal="pressed" from="MainContainer/DataContainer/DataPanel/Container/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="MainContainer/DataContainer/ButtonPanel/Container/Save" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MainContainer/DataContainer/ButtonPanel/Container/Load" to="." method="_on_LoadButton_pressed"]
